+ project text, + img shadow on hover, + project imgs, + .project to normalize padding

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
               Contact
             </a>
             <div class="navbar-item">
-              <a class="button is-primary" href="https://github.com/Doanvin" target="_blank">
+              <a class="button is-info" href="https://github.com/Doanvin" target="_blank">
                 <span class="icon">
                   <i class="fa fa-github"></i>
                 </span>
@@ -156,11 +156,11 @@
       <!-- Row: 1  Col: 1 -->
       <div class="columns">
         <div class="column is-4">
-          <article class="notification is-info">
+          <article class="project notification is-info">
             <h3 class="title is-size-4-touch">Calaska Culture</h3>
             <p class="subtitle is-size-5-touch">Semantic, Responsive</p>
-            <picture class="image is-4by3">
-              <img src="http://bulma.io/images/placeholders/640x480.png">
+            <picture class="image is-4by3 box img-hover">
+              <img src="./img/project-cc.png">
             </picture>
             <div class="content">
               <a class="button button--start is-light" href="https://www.calaska.org/?utm_source=portfolio&utm_medium=button" target="_blank">
@@ -175,17 +175,17 @@
                 </span>
                 <span class="is-size-7-touch">Github</span>
               </a>
-              <p class="project-text">This is content text about the project.</p>
+              <p class="project-text box">Website for a non-profit. Uses a lightweight css framework called Taffy. Custom js for <a href="https://www.calaska.org/?utm_source=portfolio&utm_medium=project-text#activities">tabs</a> and <a href="https://www.calaska.org/events/moccasin-class-fort-ross-2017.html?utm_source=portfolio&utm_medium=project-text">image gallery</a> implementation through a jquery plugin. MailChimp api integration.</p>
             </div>
           </article>
         </div>
         <!-- Row: 1  Col: 2 -->
         <div class="column is-4">
-          <article class="bg-primary notification  is-primary">
+          <article class="project bg-primary notification is-primary">
             <h3 class="title is-size-4-touch">10 Day Weather</h3>
-            <p class="subtitle is-size-5-touch">Api's, Bootstrap 3</p>
-            <figure class="image is-4by3">
-              <img src="//placehold.it/640x480/">
+            <p class="subtitle is-size-5-touch">Api's, Bootstrap</p>
+            <figure class="image is-4by3 box img-hover">
+              <img src="./img/project-10dw.png">
             </figure>
             <div class="content">
               <a class="button button--start is-light" href="https://doanvin.github.io/weather-by-burr" target="_blank">
@@ -200,16 +200,16 @@
                 </span>
                 <span class="is-size-7-touch">Github</span>
               </a>
-              <p class="project-text">This is content text about the project.</p>
+              <p class="project-text box">10 Day Weather attempts to get visitor's ip address from freegeoip.net and make an api call to yahoo weather. If it cannot get user's ip, it defaults to Reno, NV.  Fully responsive.</p>
             </div>
           </article>
         </div>
         <!-- Row: 1  Col: 3 -->
         <div class="column is-4">
-          <article class="notification is-info">
+          <article class="project notification is-info">
             <h3 class="title is-size-4-touch">Recipe App</h3>
             <p class="subtitle is-size-5-touch">Angular</p>
-            <figure class="image is-4by3">
+            <figure class="image is-4by3 box img-hover">
               <img src="//bulma.io/images/placeholders/640x480.png">
             </figure>
             <div class="content">
@@ -225,7 +225,7 @@
                 </span>
                 <span class="is-size-7-touch">Github</span>
               </a>
-              <p class="project-text">This is content text about the project.</p>
+              <p class="project-text box">This is content text about the project.</p>
             </div>
           </article>
         </div>
@@ -233,11 +233,11 @@
       <!-- Row: 2  Col: 1 -->
       <div class="columns">
         <div class="column is-4">
-          <article class="notification bg-primary is-primary">
+          <article class="project notification bg-primary is-primary">
             <h3 class="title is-size-4-touch">Portfolio</h3>
             <p class="subtitle is-size-5-touch">Semantic, Responsive</p>
-            <figure class="image is-4by3">
-              <img src="http://bulma.io/images/placeholders/640x480.png">
+            <figure class="image is-4by3 box img-hover">
+              <img src="./img/project-port.png">
             </figure>
             <div class="content">
               <a class="button button--start is-light" title="You're already here!" href="https://doanvin.github.io/portfolio" target="_blank" disabled>
@@ -252,7 +252,7 @@
                 </span>
                 <span class="is-size-7-touch">Github</span>
               </a>
-              <p class="project-text">This is content text.</p>
+              <p class="project-text box">Smooth scroll, try it out!  First time using Bulma css framework. Developer icon made with inkscape.</p>
             </div>
           </article>
         </div>
