.img-hover => .hover-shadow, + links on project images

--- a/src/index.html
+++ b/src/index.html
@@ -159,9 +159,11 @@
           <article class="project notification is-info">
             <h3 class="title is-size-4-touch">Calaska Culture</h3>
             <p class="subtitle is-size-5-touch">Semantic, Responsive</p>
-            <picture class="image is-4by3 box img-hover">
-              <img src="./img/project-cc.png">
-            </picture>
+            <a href="https://www.calaska.org/?utm_source=portfolio&utm_medium=img" target="_blank">
+              <picture class="image is-4by3 box hover-shadow">
+                <img src="./img/project-cc.png">
+              </picture>
+            </a>
             <div class="content">
               <a class="button button--start is-light" href="https://www.calaska.org/?utm_source=portfolio&utm_medium=button" target="_blank">
                 <span class="icon">
@@ -184,9 +186,11 @@
           <article class="project bg-primary notification is-primary">
             <h3 class="title is-size-4-touch">10 Day Weather</h3>
             <p class="subtitle is-size-5-touch">Api's, Bootstrap</p>
-            <figure class="image is-4by3 box img-hover">
+            <a href="https://doanvin.github.io/weather-by-burr" target="_blank">
+            <picture class="image is-4by3 box hover-shadow">
               <img src="./img/project-10dw.png">
-            </figure>
+            </picture>
+            </a>
             <div class="content">
               <a class="button button--start is-light" href="https://doanvin.github.io/weather-by-burr" target="_blank">
                 <span class="icon">
@@ -209,9 +213,11 @@
           <article class="project notification is-info">
             <h3 class="title is-size-4-touch">Recipe App</h3>
             <p class="subtitle is-size-5-touch">Angular</p>
-            <figure class="image is-4by3 box img-hover">
-              <img src="//bulma.io/images/placeholders/640x480.png">
-            </figure>
+            <a href="https://doanvin.github.io/first-angular-app" target="_blank">
+              <picture class="image is-4by3 box hover-shadow">
+                <img src="//bulma.io/images/placeholders/640x480.png">
+              </picture>
+            </a>
             <div class="content">
               <a class="button button--start is-light" href="https://doanvin.github.io/first-angular-app" target="_blank">
                 <span class="icon">
@@ -236,9 +242,11 @@
           <article class="project notification bg-primary is-primary">
             <h3 class="title is-size-4-touch">Portfolio</h3>
             <p class="subtitle is-size-5-touch">Semantic, Responsive</p>
-            <figure class="image is-4by3 box img-hover">
-              <img src="./img/project-port.png">
-            </figure>
+            <a title="You're already here!" href="https://doanvin.github.io/portfolio" target="_blank" disabled>
+              <picture class="image is-4by3 box hover-shadow">
+                <img src="./img/project-port.png">
+              </picture>
+            </a>
             <div class="content">
               <a class="button button--start is-light" title="You're already here!" href="https://doanvin.github.io/portfolio" target="_blank" disabled>
                 <span class="icon">
