.hover-shadow => .img-shadow, + .button-shadow

--- a/src/index.html
+++ b/src/index.html
@@ -160,18 +160,18 @@
             <h3 class="title is-size-4-touch">Calaska Culture</h3>
             <p class="subtitle is-size-5-touch">Semantic, Responsive</p>
             <a href="https://www.calaska.org/?utm_source=portfolio&utm_medium=img" target="_blank">
-              <picture class="image is-4by3 box hover-shadow">
+              <picture class="image is-4by3 box img-shadow">
                 <img src="./img/project-cc.png">
               </picture>
             </a>
             <div class="content">
-              <a class="button button--start is-light" href="https://www.calaska.org/?utm_source=portfolio&utm_medium=button" target="_blank">
+              <a class="button button--start is-light button-shadow" href="https://www.calaska.org/?utm_source=portfolio&utm_medium=button" target="_blank">
                 <span class="icon">
                   <i class="fa fa-link"></i>
                 </span>
                 <span class="is-size-7-touch">Live</span>
               </a>
-              <a class="button button--end is-dark" href="https://github.com/Doanvin/ak-native-culture" target="_blank">
+              <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/ak-native-culture" target="_blank">
                 <span class="icon">
                   <i class="fa fa-github"></i>
                 </span>
@@ -187,18 +187,18 @@
             <h3 class="title is-size-4-touch">10 Day Weather</h3>
             <p class="subtitle is-size-5-touch">Api's, Bootstrap</p>
             <a href="https://doanvin.github.io/weather-by-burr" target="_blank">
-            <picture class="image is-4by3 box hover-shadow">
+            <picture class="image is-4by3 box img-shadow">
               <img src="./img/project-10dw.png">
             </picture>
             </a>
             <div class="content">
-              <a class="button button--start is-light" href="https://doanvin.github.io/weather-by-burr" target="_blank">
+              <a class="button button--start is-light button-shadow" href="https://doanvin.github.io/weather-by-burr" target="_blank">
                 <span class="icon">
                   <i class="fa fa-link"></i>
                 </span>
                 <span class="is-size-7-touch">Live</span>
               </a>
-              <a class="button button--end is-dark" href="https://github.com/Doanvin/weather-by-burr" target="_blank">
+              <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/weather-by-burr" target="_blank">
                 <span class="icon">
                   <i class="fa fa-github"></i>
                 </span>
@@ -214,18 +214,18 @@
             <h3 class="title is-size-4-touch">Recipe App</h3>
             <p class="subtitle is-size-5-touch">Angular</p>
             <a href="https://doanvin.github.io/first-angular-app" target="_blank">
-              <picture class="image is-4by3 box hover-shadow">
+              <picture class="image is-4by3 box img-shadow">
                 <img src="//bulma.io/images/placeholders/640x480.png">
               </picture>
             </a>
             <div class="content">
-              <a class="button button--start is-light" href="https://doanvin.github.io/first-angular-app" target="_blank">
+              <a class="button button--start is-light button-shadow" href="https://doanvin.github.io/first-angular-app" target="_blank">
                 <span class="icon">
                   <i class="fa fa-link"></i>
                 </span>
                 <span class="is-size-7-touch">Live</span>
               </a>
-              <a class="button button--end is-dark" href="https://github.com/Doanvin/first-angular-app" target="_blank">
+              <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/first-angular-app" target="_blank">
                 <span class="icon">
                   <i class="fa fa-github"></i>
                 </span>
@@ -243,18 +243,18 @@
             <h3 class="title is-size-4-touch">Portfolio</h3>
             <p class="subtitle is-size-5-touch">Semantic, Responsive</p>
             <a title="You're already here!" href="https://doanvin.github.io/portfolio" target="_blank" disabled>
-              <picture class="image is-4by3 box hover-shadow">
+              <picture class="image is-4by3 box img-shadow">
                 <img src="./img/project-port.png">
               </picture>
             </a>
             <div class="content">
-              <a class="button button--start is-light" title="You're already here!" href="https://doanvin.github.io/portfolio" target="_blank" disabled>
+              <a class="button button--start is-light button-shadow" title="You're already here!" href="https://doanvin.github.io/portfolio" target="_blank" disabled>
                 <span class="icon">
                   <i class="fa fa-link"></i>
                 </span>
                 <span class="is-size-7-touch">Live</span>
               </a>
-              <a class="button button--end is-dark" href="https://github.com/Doanvin/portfolio" target="_blank">
+              <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/portfolio" target="_blank">
                 <span class="icon">
                   <i class="fa fa-github"></i>
                 </span>
