Updated projects: +ng-todo +sfthcc, Added padding btw buttons

--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
           Donavin Hannon
         </h1>
         <p class="subtitle is-size-3-mobile is-size-2-tablet is-size-1-desktop">
-          Web Developer
+          Front End Web Developer
         </p>
       </div>
     </div>
@@ -91,6 +91,8 @@
       </div>
     </div>
   </section>
+
+  <main>
 
   <section class="section bg-warning" id="about">
     <div class="container">
@@ -153,8 +155,38 @@
       </p>
 
       <!-- Begin project columns -->
-      <!-- Row: 1  Col: 1 -->
+      <!-- Row: 1  Start -->
       <div class="columns">
+        <!-- Row: 1  Col: 1 -->
+        <div class="column is-4">
+          <article class="project notification bg-primary is-primary">
+            <h3 class="title is-size-4-touch">SFTHCC</h3>
+            <p class="subtitle is-size-5-touch">Responsive, Custom Wordpress</p>
+            <a title="You're already here!" href="https://sfthcc.org" target="_blank">
+              <picture class="image is-4by3 box img-shadow">
+                <img src="./img/project-port.png">
+              </picture>
+            </a>
+            <div class="content">
+              <div class="button-wrap">
+                <a class="button button--start is-light button-shadow" title="You're already here!" href="https://doanvin.github.io/portfolio" target="_blank" disabled>
+                  <span class="icon">
+                    <i class="fa fa-link"></i>
+                  </span>
+                  <span class="is-size-7-touch">Live</span>
+                </a>
+                <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/portfolio" target="_blank">
+                  <span class="icon">
+                    <i class="fa fa-github"></i>
+                  </span>
+                  <span class="is-size-7-touch">Github</span>
+                </a>
+              </div>
+              <p class="project-text box">Custom Wordpress theme development. Ideal for marketing websites. Custom Post UI, Advanced Custom Field, and Timber plugins used.</p>
+            </div>
+          </article>
+        </div>
+        <!-- Row: 1  Col: 2 -->
         <div class="column is-4">
           <article class="project notification is-info">
             <h3 class="title is-size-4-touch">Calaska Culture</h3>
@@ -165,23 +197,25 @@
               </picture>
             </a>
             <div class="content">
-              <a class="button button--start is-light button-shadow" href="https://www.calaska.org/?utm_source=portfolio&utm_medium=button" target="_blank">
-                <span class="icon">
-                  <i class="fa fa-link"></i>
-                </span>
-                <span class="is-size-7-touch">Live</span>
-              </a>
-              <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/ak-native-culture" target="_blank">
-                <span class="icon">
-                  <i class="fa fa-github"></i>
-                </span>
-                <span class="is-size-7-touch">Github</span>
-              </a>
-              <p class="project-text box">Website for a non-profit. Uses a lightweight css framework called Taffy. Custom js for <a href="https://www.calaska.org/?utm_source=portfolio&utm_medium=project-text#activities">tabs</a> and <a href="https://www.calaska.org/events/moccasin-class-fort-ross-2017.html?utm_source=portfolio&utm_medium=project-text">image gallery</a> implementation through a jquery plugin. MailChimp api integration.</p>
+              <div class="button-wrap">
+                <a class="button button--start is-light button-shadow" href="https://www.calaska.org/?utm_source=portfolio&utm_medium=button" target="_blank">
+                  <span class="icon">
+                    <i class="fa fa-link"></i>
+                  </span>
+                  <span class="is-size-7-touch">Live</span>
+                </a>
+                <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/ak-native-culture" target="_blank">
+                  <span class="icon">
+                    <i class="fa fa-github"></i>
+                  </span>
+                  <span class="is-size-7-touch">Github</span>
+                </a>
+              </div>
+              <p class="project-text box">Website for a non-profit. Uses a lightweight css framework called Taffy. Custom JS for <a href="https://www.calaska.org/?utm_source=portfolio&utm_medium=project-text#activities">tabs</a> and <a href="https://www.calaska.org/events/moccasin-class-fort-ross-2017.html?utm_source=portfolio&utm_medium=project-text">image gallery</a> implementation through a jquery plugin. MailChimp api integration.</p>
             </div>
           </article>
         </div>
-        <!-- Row: 1  Col: 2 -->
+        <!-- Row: 1  Col: 3 -->
         <div class="column is-4">
           <article class="project bg-primary notification is-primary">
             <h3 class="title is-size-4-touch">10 Day Weather</h3>
@@ -192,52 +226,57 @@
             </picture>
             </a>
             <div class="content">
-              <a class="button button--start is-light button-shadow" href="https://doanvin.github.io/weather-by-burr" target="_blank">
-                <span class="icon">
-                  <i class="fa fa-link"></i>
-                </span>
-                <span class="is-size-7-touch">Live</span>
-              </a>
-              <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/weather-by-burr" target="_blank">
-                <span class="icon">
-                  <i class="fa fa-github"></i>
-                </span>
-                <span class="is-size-7-touch">Github</span>
-              </a>
-              <p class="project-text box">10 Day Weather attempts to get visitor's ip address from freegeoip.net and make an api call to yahoo weather. If it cannot get user's ip, it defaults to Reno, NV.  Fully responsive.</p>
+              <div class="button-wrap">
+                <a class="button button--start is-light button-shadow" href="https://doanvin.github.io/weather-by-burr" target="_blank">
+                  <span class="icon">
+                    <i class="fa fa-link"></i>
+                  </span>
+                  <span class="is-size-7-touch">Live</span>
+                </a>
+                <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/weather-by-burr" target="_blank">
+                  <span class="icon">
+                    <i class="fa fa-github"></i>
+                  </span>
+                  <span class="is-size-7-touch">Github</span>
+                </a>
+              </div>
+              <p class="project-text box">10 Day Weather attempts to get visitor's ip address from freegeoip.net and make an api call to yahoo weather. If it cannot get user's ip, it defaults to Reno, NV. Quick Bootstrap 3 prototype for Vanilla JS experience.</p>
             </div>
           </article>
         </div>
-        <!-- Row: 1  Col: 3 -->
+      </div>
+      <!-- Row: 2  Start -->
+      <div class="columns">
+        <!-- Row: 2  Col: 1 -->
         <div class="column is-4">
           <article class="project notification is-info">
-            <h3 class="title is-size-4-touch">Recipe App</h3>
-            <p class="subtitle is-size-5-touch">Angular</p>
-            <a href="https://doanvin.github.io/first-angular-app" target="_blank">
+            <h3 class="title is-size-4-touch">Angular Todo</h3>
+            <p class="subtitle is-size-5-touch">Angular 5</p>
+            <a href="https://doanvin.github.io/angular-todo" target="_blank">
               <picture class="image is-4by3 box img-shadow">
                 <img src="//bulma.io/images/placeholders/640x480.png">
               </picture>
             </a>
             <div class="content">
-              <a class="button button--start is-light button-shadow" href="https://doanvin.github.io/first-angular-app" target="_blank">
-                <span class="icon">
-                  <i class="fa fa-link"></i>
-                </span>
-                <span class="is-size-7-touch">Live</span>
-              </a>
-              <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/first-angular-app" target="_blank">
-                <span class="icon">
-                  <i class="fa fa-github"></i>
-                </span>
-                <span class="is-size-7-touch">Github</span>
-              </a>
-              <p class="project-text box">This is content text about the project.</p>
+              <div class="button-wrap">
+                  <a class="button button--start is-light button-shadow" href="https://doanvin.github.io/angular-todo" target="_blank">
+                    <span class="icon">
+                      <i class="fa fa-link"></i>
+                    </span>
+                    <span class="is-size-7-touch">Live</span>
+                  </a>
+                  <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/angular-todo" target="_blank">
+                    <span class="icon">
+                      <i class="fa fa-github"></i>
+                    </span>
+                    <span class="is-size-7-touch">Github</span>
+                  </a>
+              </div>
+              <p class="project-text box">Uses localStorage api to persist data. Supports multiple lists.</p>
             </div>
           </article>
         </div>
-      </div>
-      <!-- Row: 2  Col: 1 -->
-      <div class="columns">
+        <!-- Row: 2  Col: 2 -->
         <div class="column is-4">
           <article class="project notification bg-primary is-primary">
             <h3 class="title is-size-4-touch">Portfolio</h3>
@@ -248,19 +287,21 @@
               </picture>
             </a>
             <div class="content">
-              <a class="button button--start is-light button-shadow" title="You're already here!" href="https://doanvin.github.io/portfolio" target="_blank" disabled>
-                <span class="icon">
-                  <i class="fa fa-link"></i>
-                </span>
-                <span class="is-size-7-touch">Live</span>
-              </a>
-              <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/portfolio" target="_blank">
-                <span class="icon">
-                  <i class="fa fa-github"></i>
-                </span>
-                <span class="is-size-7-touch">Github</span>
-              </a>
-              <p class="project-text box">Smooth scroll, try it out!  First time using Bulma css framework. Developer icon made with inkscape.</p>
+              <div class="button-wrap">
+                <a class="button button--start is-light button-shadow" title="You're already here!" href="https://doanvin.github.io/portfolio" target="_blank" disabled>
+                  <span class="icon">
+                    <i class="fa fa-link"></i>
+                  </span>
+                  <span class="is-size-7-touch">Live</span>
+                </a>
+                <a class="button button--end is-dark button-shadow" href="https://github.com/Doanvin/portfolio" target="_blank">
+                  <span class="icon">
+                    <i class="fa fa-github"></i>
+                  </span>
+                  <span class="is-size-7-touch">Github</span>
+                </a>
+              </div>
+              <p class="project-text box">Smooth scroll, try it out!  First time using Bulma css framework. Svg developer icon made with inkscape.</p>
             </div>
           </article>
         </div>
@@ -318,11 +359,13 @@
     </div>
   </section>
 
+  </main>
+
   <footer class="footer">
     <div class="container">
       <div class="content has-text-centered">
         <p>
-          &copy; Copyright 2017 | Donavin Hannon
+          &copy; Copyright 2018 | Donavin Hannon
         </p>
         <p>
           <a class="icon" href="https://github.com/Doanvin">
