--- a/src/index.html
+++ b/src/index.html
@@ -169,7 +169,7 @@
             </a>
             <div class="content">
               <div class="button-wrap">
-                <a class="button button--start is-light button-shadow" title="You're already here!" href="https://doanvin.github.io/portfolio" target="_blank" disabled>
+                <a class="button button--start is-light button-shadow" title="You're already here!" href="https://sfthcc.org" target="_blank">
                   <span class="icon">
                     <i class="fa fa-link"></i>
                   </span>
@@ -281,7 +281,7 @@
           <article class="project notification bg-primary is-primary">
             <h3 class="title is-size-4-touch">Portfolio</h3>
             <p class="subtitle is-size-5-touch">Semantic, Responsive</p>
-            <a title="You're already here!" href="https://doanvin.github.io/portfolio" target="_blank" disabled>
+            <a title="You're already here!" disabled>
               <picture class="image is-4by3 box img-shadow">
                 <img src="./img/project-port.png">
               </picture>
