Removed title tags from SFTHCC

--- a/src/index.html
+++ b/src/index.html
@@ -159,14 +159,14 @@
           <article class="project notification bg-primary is-primary">
             <h3 class="title is-size-4-touch">SFTHCC</h3>
             <p class="subtitle is-size-5-touch">Responsive, Custom Wordpress</p>
-            <a title="You're already here!" href="https://sfthcc.org" target="_blank">
+            <a href="https://sfthcc.org" target="_blank">
               <picture class="image is-4by3 box img-shadow">
                 <img class="lozad" data-src="./img/project-sfthcc.png" src="./img/project-sfthcc-60x60.png">
               </picture>
             </a>
             <div class="content">
               <div class="button-wrap">
-                <a class="button button--start is-light button-shadow" title="You're already here!" href="https://sfthcc.org" target="_blank">
+                <a class="button button--start is-light button-shadow" href="https://sfthcc.org" target="_blank">
                   <span class="icon">
                     <i class="fa fa-link"></i>
                   </span>
@@ -298,7 +298,7 @@
                   <span class="is-size-7-touch">Github</span>
                 </a>
               </div>
-              <p class="project-text box">Smooth scroll, try it out!  First time using Bulma css framework. Svg developer icon made with inkscape.</p>
+              <p class="project-text box">Lazy loaded images with thumbnail placeholders. Smooth scroll.  First time using Bulma css framework. Svg developer icon made with inkscape.</p>
             </div>
           </article>
         </div>
